# DetectImage

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bugmaker/cropimage/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  main.h
app/src/main/cpp/detect/: PageDet.cpp  PageDet.h  tranforms.cpp
app/src/main/cpp/include/mnn/: Tensor.hpp
app/src/main/java/com/bugmaker/cropimage/: MainActivity.kt  Point.kt
app/src/main/java/com/bugmaker/cropimage/util/: AssertMangerUtil.kt  BitmapUtils.kt  JniUtil.kt
app/src/main/java/com/bugmaker/cropimage/view/: CropImageView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/bugmaker/cropimage/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
